[gd_scene load_steps=29 format=2]

[ext_resource path="res://scripts/EnemyOx.gd" type="Script" id=1]
[ext_resource path="res://graphics/Ox2.png" type="Texture" id=2]
[ext_resource path="res://graphics/Ox14.png" type="Texture" id=3]
[ext_resource path="res://graphics/Ox3.png" type="Texture" id=4]
[ext_resource path="res://graphics/Ox15.png" type="Texture" id=5]
[ext_resource path="res://graphics/Ox16.png" type="Texture" id=6]
[ext_resource path="res://graphics/Ox17.png" type="Texture" id=7]
[ext_resource path="res://graphics/Ox18.png" type="Texture" id=8]
[ext_resource path="res://graphics/Ox19.png" type="Texture" id=9]
[ext_resource path="res://graphics/Ox1.png" type="Texture" id=10]
[ext_resource path="res://graphics/Ox5.png" type="Texture" id=11]
[ext_resource path="res://graphics/Ox6.png" type="Texture" id=12]
[ext_resource path="res://graphics/Ox7.png" type="Texture" id=13]
[ext_resource path="res://graphics/Ox8.png" type="Texture" id=14]
[ext_resource path="res://graphics/Ox9.png" type="Texture" id=15]
[ext_resource path="res://graphics/Ox20.png" type="Texture" id=16]
[ext_resource path="res://graphics/Ox21.png" type="Texture" id=17]
[ext_resource path="res://graphics/Ox22.png" type="Texture" id=18]
[ext_resource path="res://graphics/Ox23.png" type="Texture" id=19]
[ext_resource path="res://graphics/Ox24.png" type="Texture" id=20]
[ext_resource path="res://graphics/Ox10.png" type="Texture" id=21]
[ext_resource path="res://graphics/Ox11.png" type="Texture" id=22]
[ext_resource path="res://graphics/Ox12.png" type="Texture" id=23]
[ext_resource path="res://graphics/Ox13.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "Axe_Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "Axe_Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "Axe_Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 3 ) ],
"loop": false,
"name": "Axe_Left",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 128, 48 )

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 32.0

[node name="KinematicBody2D" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 4
collision_mask = 23
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
downtime_after_attack = 0.5
movement_speed = 50
attack_speed = 180

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 16 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="ViewArea" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewArea" index="0"]

position = Vector2( 144, 0 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="AttackRange" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange" index="0"]

position = Vector2( 0, 16 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]

[connection signal="body_entered" from="ViewArea" to="." method="_on_ViewArea_body_entered"]

[connection signal="body_exited" from="ViewArea" to="." method="_on_ViewArea_body_exited"]

[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]


